# StockAlert

./: CMakeLists.txt
test/: CMakeLists.txt
test/gtest/: CMakeLists.txt
